--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_loan_borrow">LoanBorrowActivity</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
     <string name="loan_title">Loan a book</string>
     <string name="borrow_title">Borrow a book</string>
     <string name="scan_media_button">Scan</string>
