--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="borrow_title">Borrow a book</string>
     <string name="scan_media_button">Scan</string>
     <string name="loan_borrow_contact_hint">Enter your friend\'s name</string>
+    <string name="submit">Submit</string>
 
 </resources>
