--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="scan_media_button">Scan</string>
     <string name="loan_borrow_contact_hint">Enter your friend\'s name</string>
     <string name="submit">Submit</string>
+    <string name="share_text">Share</string>
 
 </resources>
